# innovation-support-server

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  web3_connect.py
.github/workflows/: unit_test.yaml
app/: cli.py  config.py  main.py
app/assets/abi/: 0x0FAD025a4B4eF3a426A7C609E1cd6Be5b689235B.json  0x46f14F3Dd30465Fa2AA1cA929BceFc9FeE2ad0c9.json  0x8233d664582749F4c1168169028bBE33E16e3814.json  0x99802244430b37362Eb494ec5Ce92fBC8F38f36C.json  0xB5A39Fc8c3b98A2d360274Afc7Eb6C94A41aDC9c.json  0xa09218AfBb35aa19A72834B04e16bc6faF36CD81.json
app/facades/database/: __init__.py  prizes_store.py  proposal_votes_store.py  proposals_store.py  timelines_store.py  users_store.py
app/facades/firebase/: __init__.py  proposals_store.py  user_store.py  users_store.py
app/facades/gcs/: __init__.py  gcs.py  proposal_pdf.py
app/routers/: account_router.py  demo_router.py  extension_router.py  prize_router.py  proposal_router.py  proposal_vote_router.py  timeline_router.py  uer_router.py  user_router.py  web3_router.py
app/utils/: authorization.py  common.py
scripts/: sample_vote.py
tests/: test_account_router.py  test_extension_router.py  test_judement_proposal_service.py  test_prize_router.py  test_proposal_router.py  test_proposal_vote_router.py  test_samrt_contract.py  test_timeline_router.py  test_user_router.py
tests/proposal_routers/: test_entry_proposal.py  test_fetch_proposal.py  test_find_proposal.py
tests/smart_contracts/: test_inosapo_ft.py  test_proposal_nft.py  test_proposal_vote.py  test_sample_contract.py
(+60 files in other folders)
