[tool.poetry]
name = "inovation-support-server"
version = "0.1.0"
description = ""
authors = ["sey323 <sey323_nm@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
web3 = {extras = ["tester"], version = "^5.31.3"}
firebase-admin = "^6.1.0"
python-dotenv = "^1.0.0"
google-cloud-storage = "^2.7.0"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79